--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^16.7.0-alpha.2",
     "react-html5-camera-photo": "^1.4.3",
     "react-qr-reader": "^2.2.1",
-    "react-router": "^5.0.1"
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1"
   },
   "meteor": {
     "mainModule": {
