--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-html5-camera-photo": "^1.4.3",
     "react-qr-reader": "^2.2.1",
     "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "typeface-roboto": "0.0.75"
   },
   "meteor": {
     "mainModule": {
