--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.6",
     "history": "^4.9.0",
     "meteor-node-stubs": "^0.4.1",
+    "moment": "^2.24.0",
     "qrcode.react": "^0.9.3",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
@@ -21,6 +22,7 @@
     "react-qr-reader": "^2.2.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "simpl-schema": "^1.5.5",
     "typeface-roboto": "0.0.75"
   },
   "meteor": {
