--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/runtime": "^7.1.5",
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
+    "bcrypt": "^3.0.6",
     "classnames": "^2.2.6",
     "history": "^4.9.0",
     "meteor-node-stubs": "^0.4.1",
